Fix broken UI issues

--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,13 @@ a:hover {
   font-weight: 700;
   height: 10%;
 }
+.sections-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
 .summary-and-feedback-wrapper {
   display: flex;
   width: 100%;
@@ -151,6 +158,30 @@ a:hover {
   padding: 1em;
   margin: 1em;
   /* background-color: tomato; */
+  outline: solid var(--primary-color) 5px;
+  border-radius: 0.2em;
+  box-shadow: 0px 0px 10px grey;
+}
+.survey-box-video-left {
+  width: 900px;
+  height: 560px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1em;
+  margin: 1em;
+  outline: solid var(--primary-color) 5px;
+  border-radius: 0.2em;
+  box-shadow: 0px 0px 10px grey;
+}
+.survey-box-video-right {
+  width: 430px;
+  height: 560px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1em;
+  margin: 1em;
   outline: solid var(--primary-color) 5px;
   border-radius: 0.2em;
   box-shadow: 0px 0px 10px grey;
@@ -250,6 +281,11 @@ a:hover {
   height: auto;
   display: flex;
   justify-content: center;
+}
+.generic-image-section {
+  display: flex;
+  justify-content: center;
+  height: 50%;
 }
 .scaled-image-fit-width {
   width: 100%;
@@ -817,6 +853,17 @@ textarea::-webkit-scrollbar-thumb {
   background-color: #ffffff;
 }
 /* wrapper around genericImageSections for ranking*/
+.ranking-wrapper {
+  display: "flex";
+  flex-direction: "column";
+  align-items: "center";
+  justify-content: "center";
+  width: 100%;
+  overflow: hidden;
+  position: "relative";
+  bottom: "2em";
+  height: 100%;
+}
 .footer-link {
   color: black;
 }
